<resources>
    <string name="language_code">en</string>
    <string name="script_code" />
    <string name="app_name">PhotoPrism Gallery</string>
    <string name="build_year" translatable="false">2026</string>
    <string name="uri_scheme" translatable="false">photoprismgallery</string>
    <string name="media_type_image">Image</string>
    <string name="media_type_raw" translatable="false">RAW</string>
    <string name="media_type_animated">Animation</string>
    <string name="media_type_live">Live photo</string>
    <string name="media_type_video">Video</string>
    <string name="media_type_vector">Vector</string>
    <string name="media_type_sidecar">Sidecar file</string>
    <string name="media_type_text">Text</string>
    <string name="media_type_other">Other file</string>
    <string name="media_type_unknown">Unknown file type</string>
    <string name="file_thumbnail">File thumbnail</string>
    <string name="downloading_progress">Downloading…</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_download_file">Failed to download the file</string>
    <string name="select_content">Select content</string>
    <string name="library">Library</string>
    <string name="preview_is_not_available">Preview is not available</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="open_with">Open with</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="failed_to_load_the_preview">Failed to load the preview</string>
    <string name="failed_to_load_the_thumbnail">Failed to load the thumbnail</string>
    <string name="today">Today</string>
    <string name="search_the_library">Search the library</string>
    <string name="enter_the_query">Enter the query</string>
    <string name="media_type">Type</string>
    <string name="apply_search">Apply</string>
    <string name="reset_search">Reset</string>
    <string name="error_you_have_to_connect_to_library">You have to connect to a library first</string>
    <string name="library_root_url">Library root URL</string>
    <string name="username_optional">Username (optional)</string>
    <string name="password_optional">Password (optional)</string>
    <string name="connect_to_a_library">Connect to a library</string>
    <string name="connect">Connect</string>
    <string name="template_error_inaccessible_library_url">Library is not accessible: %1$s</string>
    <string name="error_invalid_library_url_format">URL format is incorrect. Make sure it contains the protocol</string>
    <string name="error_library_requires_credentials">Library requires credentials</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="template_error_failed_to_load_content">Failed to load the content: %1$s</string>
    <string name="error_library_not_accessible_try_again">Library is not accessible. Check the connection and try again</string>
    <string name="try_again">Try again</string>
    <string name="load_more">Load more</string>
    <string name="template_started_download_file">File will be saved to the Downloads: %1$s</string>
    <string name="error_storage_permission_is_required">Storage access permission is required</string>
    <string name="add_search_bookmark">Add a bookmark</string>
    <string name="edit_search_bookmark">Edit the bookmark</string>
    <string name="search_bookmark_name">Name</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="search_bookmarks">Bookmarks</string>
    <string name="template_error_failed_to_add_bookmark">Failed to add the bookmark: %1$s</string>
    <string name="template_error_failed_to_edit_bookmark">Failed to edit the bookmark: %1$s</string>
    <string name="template_error_failed_to_delete_bookmark">Failed to delete the bookmark: %1$s</string>
    <string name="how_to_search_the_library">How to search the library</string>
    <string name="some_types_are_not_available_when_selecting">Only types supported by the requesting app are available</string>
    <string name="include_private_content">Include private content</string>
    <string name="only_favorite_content">Only favorite</string>
    <string name="client_certificate_optional">Client certificate (optional)</string>
    <string name="clear">Clear</string>
    <string name="how_to_use_client_certificate">How to use client certificates</string>
    <string name="p12_certificate_guide">
        1. Download your PKCS12 (.p12) bundle to the device;\n\n
        2. Install the bundle by opening it from a file explorer. Use \"VPN and apps\" type;\n\n
        3. Return to the gallery and select the installed certificate.</string>
    <string name="ok">OK</string>
    <string name="learn_more">Learn more</string>
    <string name="preferences">Preferences</string>
    <string name="library_preferences">@string/library</string>
    <string name="about">About</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="template_error_failed_to_export_bookmarks">Failed to export bookmarks: %1$s</string>
    <string name="bookmarks_preferences">@string/search_bookmarks</string>
    <string name="export">Export</string>
    <string name="export_bookmarks">Export bookmarks</string>
    <string name="importt">Import</string>
    <string name="import_bookmarks">Import bookmarks</string>
    <string name="template_error_failed_to_import_bookmarks">Failed to import bookmarks: %1$s</string>
    <string name="template_successfully_imported_search_bookmarks">Successfully %1$s</string>
    <string name="replace_current_bookmarks_with_saved">Replace current bookmarks with saved ones</string>
    <string name="save_current_bookmarks_to_file">Save current bookmarks to a file</string>
    <string name="your_bookmarks_will_be_replaced">Your current bookmarks will be replaced. Continue?</string>
    <string name="continuee">Continue</string>
    <string name="disconnect_from_library">Disconnect</string>
    <string name="disconnect_from_library_confirmation">Disconnect from the library? Your bookmarks will be kept</string>
    <string name="template_error_failed_to_disconnect">Failed to disconnect: %1$s</string>
    <string name="view_media">View</string>
    <string name="open_in_web_viewer">Open in web viewer</string>
    <string name="albums">Albums</string>
    <string name="loading_albums_progress">@string/loading_data_progress</string>
    <string name="reload_albums">@string/reload</string>
    <string name="no_albums_found">No albums found</string>
    <string name="clear_selection">Clear selection</string>
    <string name="done_selecting">Done</string>
    <string name="template_current_of">%1$d of %2$d</string>
    <string name="search_doesnt_fit_allowed_types">Search query doesn\'t fit the allowed types</string>
    <string name="save_file_to_the_storage">Save the file to the storage</string>
    <string name="share_the_file">Share the file</string>
    <string name="download_is_completed">Download is completed</string>
    <string name="photoprism_web" translatable="false">PhotoPrism Web</string>
    <string name="open_in_browser" translatable="false">@string/fallback_menu_item_open_in_browser</string>
    <string name="welcome_title">Welcome to the gallery</string>
    <string name="template_welcome_text">
        <![CDATA[
        Please note that this app is not an official PhotoPrism client.
        It is maintained by Oleg\u00A0Koretsky (Radiokot) and has no relationship to the core team.
        <br><br>
        If something is wrong with the app, please leave feedback on Google Play,
        <a href="#issue">submit a bug report</a>
        or send a letter to <a href="mailto:%1$s">%1$s</a>.
        <br><br>
        Thank you.
        ]]>
    </string>
    <string name="used_open_source_software">Used open-source software</string>
    <string name="user_guides">User guide</string>
    <string name="template_preferences_version">%1$s %2$s\n%3$s Oleg Koretsky and contributors from GitHub</string>
    <string name="people">People</string>
    <string name="loading_people_progress">@string/loading_data_progress</string>
    <string name="reload_people">@string/reload</string>
    <string name="no_people_found">No people found</string>
    <string name="match_all_people">All</string>
    <string name="match_any_people">Any</string>
    <string name="reload">Reload</string>
    <string name="loading_data_progress">Loading data…</string>
    <string name="search_preferences">Search</string>
    <string name="show_people">@string/people</string>
    <string name="show_people_explanation">Show people and new faces on the search screen</string>
    <string name="show_albums">@string/albums</string>
    <string name="show_albums_explanation">Show albums on the search screen</string>
    <string name="see_all_albums">See all</string>
    <string name="see_all_people">See all</string>
    <string name="search">Search</string>
    <string name="failed_to_load_albums">Failed to load albums</string>
    <string name="failed_to_load_people">Failed to load people</string>
    <string name="folders">Folders</string>
    <string name="show_album_folders_explanation">Show folders in the album list</string>
    <string name="files_saved_to_downloads">Files have been saved to the Downloads</string>
    <string name="start_slideshow">Slideshow</string>
    <string name="slideshow_previous">Previous</string>
    <string name="got_it">Got it</string>
    <string name="slideshow_guide_got_it">@string/got_it</string>
    <string name="slideshow_next">Next</string>
    <string name="slideshow_guide_show_system_buttons">Show system buttons</string>
    <string name="slideshow_exit">Exit the slideshow</string>
    <string name="slideshow_guide_speed">The speed can be changed in Preferences</string>
    <string name="viewing_preferences">Viewing</string>
    <string name="slideshow_speed_preference">Slideshow speed</string>
    <string-array name="slideshow_speed_array">
        
        <item>Slow</item>
        <item>Slower</item>
        <item>Normal</item>
        <item>Faster</item>
        <item>Fast</item>
    </string-array>
    <string name="gallery_item_scale_preference">Gallery item size</string>
    <string-array name="gallery_item_scale_array">
        
        <item>Tiny</item>
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>
    <string name="language_preference">Language</string>
    <string name="paste">Paste</string>
    <string name="tfa_code_dialog_title">Verification code</string>
    <string name="tfa_code_dialog_message">Enter or paste the code from the authenticator</string>
    <string name="tfa_code_dialog_input_hint">Code</string>
    <string name="error_invalid_tfa_code">Invalid verification code</string>
    <string name="error_session_expired">The session has been expired. Consider using a dedicated password for the gallery</string>
    <string name="memories_notification_new_memories_title">New memories found</string>
    <string name="memories_notification_new_memories_text">Remember moments from the past</string>
    <string name="memories_notification_channel_name">@string/extension_memories_title</string>
    <string name="memories_notification_channel_description">Whenever new memories are found</string>
    <string name="extensions_preferences">Extensions</string>
    <string name="archive_action">Archive</string>
    <string name="add_to_album">Add to album</string>
    <string name="favorites">Favorites</string>
    <string name="calendar">Calendar</string>
    <string name="remove_from_album">Remove from the album</string>
    <string name="see_photos_nearby_action">Photos nearby</string>
    <string name="is_private">Private</string>
</resources>