<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/all"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/ic_film"
        android:title="@string/library" />

    <item
        android:id="@+id/albums"
        android:icon="@drawable/ic_album"
        android:title="@string/albums" />

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites" />

    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar" />

    <item
        android:id="@+id/folders"
        android:icon="@drawable/ic_folder"
        android:title="@string/folders" />

    <item
        android:id="@+id/preferences"
        android:icon="@drawable/ic_gear"
        android:title="@string/preferences" />
</menu>
