<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/start_slideshow"
        android:icon="@drawable/ic_slideshow"
        android:title="@string/start_slideshow"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="ifRoom"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/open_in"
        android:icon="@drawable/ic_open_in"
        android:title="@string/open_with"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="never"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/open_in_web_viewer"
        android:icon="@drawable/ic_earth"
        android:title="@string/open_in_web_viewer"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="never"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/add_to_album"
        android:icon="@drawable/ic_album"
        android:title="@string/add_to_album"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="never" />

    <item
        android:id="@+id/remove_from_album"
        android:icon="@drawable/ic_remove_from_album"
        android:title="@string/remove_from_album"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="never" />

    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive_action"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="never"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="never"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/is_private"
        android:checkable="true"
        android:icon="@drawable/ic_eye_off"
        android:title="@string/is_private"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="never"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/photos_nearby"
        android:icon="@drawable/ic_map"
        android:title="@string/see_photos_nearby_action"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="never"
        tools:ignore="PrivateResource" />
</menu>
