<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="always" />
    <item
        android:id="@+id/download"
        android:icon="@drawable/ic_download"
        android:title="@string/download"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_to_album"
        android:icon="@drawable/ic_album"
        android:title="@string/add_to_album"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="never" />
    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive_action"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="never"/>
</menu>
