<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/add_search_bookmark"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/add_search_bookmark"
        android:visible="false"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="always"
        tools:visible="true" />
    <item
        android:id="@+id/edit_search_bookmark"
        android:icon="@drawable/ic_bookmark_filled"
        android:title="@string/edit_search_bookmark"
        android:visible="false"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="always"
        tools:visible="true" />
    <item
        android:id="@+id/reset_search"
        android:icon="@drawable/ic_close"
        android:title="@string/reset_search"
        android:visible="false"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="always"
        tools:visible="true" />
</menu>
