<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/bookmarks_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_bookmarks"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/bookmarks_chips_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:flexWrap="wrap"
        tools:background="@android:color/system_neutral1_50"
        tools:layout_height="30dp">
        <!--Filled programmatically -->
    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_type"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/media_type_chips_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:flexWrap="wrap"
        tools:background="@android:color/system_neutral1_50"
        tools:layout_height="30dp">
        <!--Filled programmatically -->
    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:id="@+id/types_not_available_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/some_types_are_not_available_when_selecting"
        android:textColor="?android:textColorSecondary"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/apply_search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/reset_search" />
</LinearLayout>