<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_text_view"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:singleLine="false"
        android:text="@string/tfa_code_dialog_title"
        app:layout_constraintEnd_toStartOf="@id/close_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/cancel"
        android:padding="4dp"
        android:src="@drawable/ic_close"
        android:tint="?colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_text_view" />

    <TextView
        android:id="@+id/message_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tfa_code_dialog_message"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/code_text_input"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="username"
        android:hint="@string/tfa_code_dialog_input_hint"
        app:endIconContentDescription="@string/paste"
        app:endIconDrawable="@drawable/ic_content_paste_go"
        app:endIconMode="custom"
        app:endIconTint="@color/text_input_layout_end_icon_tint"
        app:layout_constraintTop_toBottomOf="@id/message_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="numberPassword|textVisiblePassword"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck"
            tools:text="123 456" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        style="@style/Widget.Material3.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/continuee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_text_input" />

</androidx.constraintlayout.widget.ConstraintLayout>
