<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/people"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

    <Space
        android:layout_width="0dp"
        android:layout_height="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/people_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/list_item_person" />

    <TextView
        android:id="@+id/loading_people_text_view"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/loading_people_progress"
        android:textAppearance="@style/NoticeTextAppearance"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/no_people_found_text_view"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/no_people_found"
        android:textAppearance="@style/NoticeTextAppearance"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reload_people_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="0dp"
        android:text="@string/reload_people"
        android:visibility="gone"
        tools:visibility="visible" />

    <Space
        android:layout_width="0dp"
        android:layout_height="16dp" />
</LinearLayout>
